Moved experiments to experiments folder

--- a/experiments/Semantics Generator Experiment.ipynb
+++ b/experiments/Semantics Generator Experiment.ipynb
@@ -10,6 +10,7 @@
     "https://grfia.dlsi.ua.es/primus/\n",
     "https://mdpi-res.com/d_attachment/applsci/applsci-08-00606/article_deploy/applsci-08-00606-v3.pdf end to end neurla optical music recognition of monophonic scores\n",
     "https://mediatum.ub.tum.de/doc/1292048/file.pdf Labelling unsegmented sequence data with RNNs\n",
+    "https://apacha.github.io/OMR-Datasets/ optical music recognition curated datasets\n",
     "1) Get Primus Dataset\n",
     "2) ETL and get model to work (semantic model)\n",
     "3) Try on sample inputs\n",
@@ -50,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SEMANTIC_MODEL_FOLDER = './models/Semantic-Model'\n",
+    "SEMANTIC_MODEL_FOLDER = '../models/Semantic-Model'\n",
     "SEMANTIC_MODEL_PATH = SEMANTIC_MODEL_FOLDER + '/semantic_model.meta'\n",
     "SEMANTIC_VOCABULARY_PATH = SEMANTIC_MODEL_FOLDER + '/vocabulary_semantic.txt'"
    ]
@@ -158,7 +159,7 @@
     "def main():\n",
     "    semantic_generator = SemanticGenerator()\n",
     "    \n",
-    "    img = './images/test1.png'\n",
+    "    img = '../images/test1.png'\n",
     "    print(semantic_generator.predict(img))"
    ]
   },
