Ran additional experiments on semantics generator to check for grace notes.

--- a/experiments/Semantics Generator Experiment.ipynb
+++ b/experiments/Semantics Generator Experiment.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,20 +152,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
     "    semantic_generator = SemanticGenerator()\n",
     "    \n",
-    "    img = '../images/test1.png'\n",
+    "    img = '../data/package_ab/225001618-1_1_1/225001618-1_1_1.png'\n",
     "    print(semantic_generator.predict(img))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -174,8 +174,8 @@
      "text": [
       "WARNING:tensorflow:The saved meta_graph is possibly from an older release:\n",
       "'model_variables' collection should be of type 'byte_list', but instead is of type 'node_list'.\n",
-      "INFO:tensorflow:Restoring parameters from ./models/Semantic-Model/semantic_model\n",
-      "['clef-G2', 'keySignature-FM', 'timeSignature-3/2', 'note-A4_quarter', 'note-Bb4_quarter', 'note-A4_quarter', 'note-G4_quarter', 'note-F4_eighth', 'note-G4_eighth', 'barline', 'note-F4_quarter.', 'note-F4_quarter', 'note-F4_eighth', 'barline', 'note-F4_quarter', 'note-Bb4_quarter', 'note-Bb4_quarter', 'note-Bb4_quarter', 'note-C5_quarter', 'note-D5_quarter', 'barline', 'note-C5_half.', 'barline']\n"
+      "INFO:tensorflow:Restoring parameters from ../models/Semantic-Model/semantic_model\n",
+      "['clef-G2', 'keySignature-FM', 'timeSignature-C', 'note-D4_half', 'note-D5_half', 'barline', 'note-F5_half', 'note-G#4_half', 'barline', 'note-B4_eighth', 'note-A4_eighth.', 'note-G#4_sixteenth', 'note-A4_quarter', 'rest-eighth.', 'note-F#4_eighth.', 'note-F4_eighth.', 'note-F4_sixteenth', 'barline', 'gracenote-A4_eighth', 'note-G4_eighth.', 'note-F#4_sixteenth', 'note-G4_quarter', 'rest-eighth.']\n"
      ]
     }
    ],
@@ -188,7 +188,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "['clef-G2', 'keySignature-FM', 'timeSignature-3/2', 'note-A4_quarter', 'note-Bb4_quarter', 'note-A4_quarter', 'note-G4_quarter', 'note-F4_eighth', 'note-G4_eighth', 'barline', 'note-F4_quarter.', 'note-F4_quarter', 'note-F4_eighth', 'barline', 'note-F4_quarter', 'note-Bb4_quarter', 'note-Bb4_quarter', 'note-Bb4_quarter', 'note-C5_quarter', 'note-D5_quarter', 'barline', 'note-C5_half.', 'barline']"
+   ]
   }
  ],
  "metadata": {
