Added constraint programming to generate finger notations.

--- a/experiments/Finger Notation Generator Experiment.ipynb
+++ b/experiments/Finger Notation Generator Experiment.ipynb
@@ -10,18 +10,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
     "import constraint\n",
+    "import logging\n",
     "\n",
     "from itertools import chain\n",
     "from string import digits\n",
     "\n",
+    "import pickle as pkl\n",
+    "\n",
     "from pprint import pprint\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "sys.path.insert(1, os.path.join(sys.path[0], '..'))\n",
+    "import finger_oracle\n",
     "# Technically no need to import semantics_generator for this experiment,\n",
     "# Can simply use semantics file as ground truth\n",
     "# sys.path.insert(1, os.path.join(sys.path[0], '..'))\n",
@@ -30,12 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "DATA_DIR = ['../data/package_aa', '../data/package_ab']\n",
-    "BATCH_SIZE = 10"
+    "DONE_STATUS_OUTPUT = '../tmp/finger_notation_generator_output.pkl'\n",
+    "IGNORE_LIST_PATH = '../tmp/finger_notation_generator_ignore.txt'"
    ]
   },
   {
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,15 +154,38 @@
     "# An alternative neighbourhood-search algorithm exists at https://qmro.qmul.ac.uk/xmlui/bitstream/handle/123456789/11801/Herremans%20A%20variable%20neighborhood%20search%20algorithm%202015%20Accepted.pdf\n",
     "# but it is over-engineered for this purpose\n",
     "def solve(enc):\n",
-    "    variables = ['v{}'.format(i) for i in range(len(enc))]\n",
+    "    variables = [i for i in range(len(enc))]\n",
+    "    is_black_key = [e[0] for e in enc]\n",
+    "    distance = [e[1] for e in enc]\n",
     "    problem = constraint.Problem()\n",
+    "    \n",
+    "    oracles = []\n",
+    "    for i in range(len(enc) - 1):\n",
+    "        ibk_first, ibk_second = enc[i][0], enc[i+1][0]\n",
+    "        d = enc[i+1][1]\n",
+    "        oracles.append(finger_oracle.FingerOracle(ibk_first, ibk_second, d))\n",
     "    for v in variables:\n",
     "        problem.addVariable(v, range(1,6))\n",
-    "        \n",
+    "    \n",
+    "    # consecutive notes must not be played with the same finger\n",
     "    for i in range(0, len(variables) - 1):\n",
-    "        problem.addConstraint(constraint.ExactSumConstraint(30))\n",
+    "        problem.addConstraint(constraint.AllDifferentConstraint(), [i, i + 1])\n",
+    "    \n",
+    "    for i in range(len(enc) - 1):\n",
+    "        problem.addConstraint(constraint.FunctionConstraint(oracles[i].is_valid)\n",
+    "                              , [i, i + 1])\n",
+    "    \n",
+    "    # can use problem.getSolutionIter() here to generate multiple solutions\n",
+    "    \n",
+    "    solution = problem.getSolution()\n",
+    "    if not solution:\n",
+    "        return None\n",
+    "    \n",
+    "    output = []\n",
+    "    for i in range(len(solution)):\n",
+    "        output.append(solution[i])\n",
     "        \n",
-    "    print(problem.getSolution())"
+    "    return output"
    ]
   },
   {
@@ -166,20 +197,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get semantic data from dataset\n",
     "# assumes data path is data_src[i]/folder_name/folder_name.semantic, in-line with primus dataset\n",
-    "def get_semantics_data(data_src):\n",
+    "def get_semantics_data(data_src, done, ignore):\n",
     "    for src in data_src:\n",
     "        for i, folder in enumerate(next(os.walk(src))[1]):\n",
-    "            # print(os.path.join(DATA_DIR, folder)) # this looks disgusting on windows lmao\n",
     "            path_to_file = os.path.join(src, folder, \"{}.semantic\".format(folder))\n",
+    "            if path_to_file in done or path_to_file in ignore:\n",
+    "                continue\n",
     "            with open(path_to_file, \"r\") as f:\n",
     "                try:\n",
-    "                    yield f.readlines()\n",
+    "                    yield path_to_file, folder, f.readlines()\n",
     "                except FileNotFoundError:\n",
     "                    logging.warn(\"Data file not found: {}\".format(path_to_file))\n",
     "    "
@@ -194,49 +226,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
-    "    for i, semantics_data in enumerate(get_semantics_data(DATA_DIR)):\n",
-    "        encoding = get_encoding(semantics_data)\n",
-    "        pseudo_labels = solve(encoding)\n",
-    "        pprint(semantics_data)\n",
-    "        pprint(encoding)\n",
-    "        break"
+    "    done = set()\n",
+    "    ignore = set()\n",
+    "    \n",
+    "    logger = logging.getLogger()\n",
+    "    logger.setLevel(logging.DEBUG)\n",
+    "\n",
+    "    # check for existence of files\n",
+    "    if not os.path.exists(DONE_STATUS_OUTPUT):\n",
+    "        with open(DONE_STATUS_OUTPUT, 'wb+') as f:\n",
+    "            pass\n",
+    "    if not os.path.exists(IGNORE_LIST_PATH):\n",
+    "        with open(IGNORE_LIST_PATH, 'w+') as f:\n",
+    "            pass\n",
+    "    \n",
+    "    # load file which are already done and ignore list\n",
+    "    with open(DONE_STATUS_OUTPUT, 'rb') as f:\n",
+    "        try:\n",
+    "            done = pkl.load(f)\n",
+    "        except EOFError:\n",
+    "            done = set()\n",
+    "    with open(IGNORE_LIST_PATH, 'r') as f:\n",
+    "        for line in f:\n",
+    "            line = line.rstrip()\n",
+    "            if line:\n",
+    "                ignore.add(line)\n",
+    "    \n",
+    "    last_file = \"No File\"\n",
+    "    try:\n",
+    "        with tqdm() as pbar:\n",
+    "            pbar.set_description(\"Generating finger positions\")\n",
+    "            for i, (path_to_file, filename, semantics_data) in enumerate(get_semantics_data(DATA_DIR, done, ignore)):\n",
+    "                last_file = path_to_file\n",
+    "                finger_file_path = \"{}.finger\".format(path_to_file[:-9])\n",
+    "                encoding = get_encoding(semantics_data)\n",
+    "                pseudo_labels = solve(encoding)\n",
+    "                if pseudo_labels:\n",
+    "                    pseudo_labels = map(str, pseudo_labels)\n",
+    "                    with open(finger_file_path, \"w\") as f:\n",
+    "                        f.write(' '.join(map(str, pseudo_labels)))\n",
+    "                        done.add(path_to_file)\n",
+    "                    pbar.update(1)\n",
+    "                else:\n",
+    "                    with open(IGNORE_LIST_PATH, 'a') as f:\n",
+    "                        f.write('{}\\n'.format(path_to_file))\n",
+    "                    \n",
+    "                # pprint(semantics_data)\n",
+    "                # pprint(pseudo_labels)\n",
+    "                # pprint(encoding)\n",
+    "                with open(DONE_STATUS_OUTPUT, 'wb') as f:\n",
+    "                    pkl.dump(done, f)\n",
+    "    except:\n",
+    "        logging.error(\"Exception triggered while processing {}\".format(last_file))\n",
+    "        pbar.close()\n",
+    "        raise\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'v0': 5, 'v1': 5, 'v10': 5, 'v11': 5, 'v12': 1, 'v13': 1, 'v2': 1, 'v3': 1, 'v4': 1, 'v5': 1, 'v6': 1, 'v7': 1, 'v8': 1, 'v9': 1}\n",
-      "['clef-G2\\tkeySignature-EbM\\ttimeSignature-3/4\\tnote-Bb5_quarter\\t'\n",
-      " 'note-Eb5_eighth\\tnote-Bb5_eighth\\tnote-C6_eighth\\tnote-Bb5_eighth\\tbarline\\t'\n",
-      " 'note-Ab5_eighth\\tnote-Ab5_eighth\\trest-sixteenth\\tnote-Ab5_sixteenth\\t'\n",
-      " 'note-G5_sixteenth\\tnote-Ab5_sixteenth\\tnote-Bb5_sixteenth\\t'\n",
-      " 'note-Ab5_sixteenth\\tnote-G5_sixteenth\\tnote-Ab5_sixteenth\\tbarline\\t']\n",
-      "[(True, 0),\n",
-      " (True, -7),\n",
-      " (True, 7),\n",
-      " (False, 2),\n",
-      " (True, -2),\n",
-      " (True, -2),\n",
-      " (True, 0),\n",
-      " (True, 0),\n",
-      " (False, -1),\n",
-      " (True, 1),\n",
-      " (True, 2),\n",
-      " (True, -2),\n",
-      " (False, -1),\n",
-      " (True, 1)]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6e4066da902848b88208f832c5c96d31",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
