Added documentation for future make file

--- a/experiments/Semantics Generator Experiment.ipynb
+++ b/experiments/Semantics Generator Experiment.ipynb
@@ -25,7 +25,8 @@
     "1) Makefile to download:\n",
     "    semantic model into SEMANTIC_MODEL_PATH folder (https://grfia.dlsi.ua.es/primus/models/PrIMuS/Semantic-Model.zip)\n",
     "    vocabulary_semantic.txt into SEMANTIC_MODEL_PATH folder (https://github.com/OMR-Research/tf-end-to-end/raw/master/Data/vocabulary_semantic.txt)\n",
-    "2) need to change tf reset_default_graph in SemanticGenerator to accomodate loading a second model in tf (https://stackoverflow.com/questions/41990014/load-multiple-models-in-tensorflow)"
+    "    training files to be extracted (https://grfia.dlsi.ua.es/primus/packages/primusCalvoRizoAppliedSciences2018.tgz)\n",
+    "3) need to change tf reset_default_graph in SemanticGenerator to accomodate loading a second model in tf (https://stackoverflow.com/questions/41990014/load-multiple-models-in-tensorflow)"
    ]
   },
   {
